--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,11 @@
       <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
     </form>
   </header>
+  <section>
+    <div id="poke-grid">
+      <app-common-card></app-common-card>
+    </div>
+  </section>  
 </main>
 
 <router-outlet></router-outlet>
