--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,32 +1,52 @@
-main{
+main {
     background-image: url('../assets/imgs/background.jpg');
-    header{
+
+    header {
         display: flex;
         align-items: center;
         width: 100%;
         flex-direction: column;
-        img{
-            width: 500px;
+
+        img {
+            width: 70%;
         }
-        form{
+
+        form {
             width: fit-content;
             background: #FFF;
             border-radius: 6px;
             padding: 4px;
-            input{
+
+            input {
                 border: none;
                 font-size: 1.5rem;
             }
-            input:focus{
+
+            input:focus {
                 outline: none;
             }
-            button{
+
+            button {
                 font-size: 1.5rem;
                 padding: 4px;
                 border: none;
                 background: none;
                 width: auto;
             }
+        }
+    }
+
+    section {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        margin-top: 40px;
+        padding: 10px;
+
+        #poke-grid {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 20px;
         }
     }
 }
